--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <script defer="" src="js/main.js"></script>
 <script defer="" src="js/vendors~password-generator.js"></script>
 <script defer="" src="js/password-generator.js"></script>
+<script defer="" src="js/password-generator-gpw-js.js"></script>
+            
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
