--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <script defer="" src="js/main.js"></script>
 <script defer="" src="js/vendors~password-generator.js"></script>
 <script defer="" src="js/password-generator.js"></script>
-<script defer="" src="js/password-generator-gpw-js.js"></script>
-            
+<script defer="" src="js/password-generator-gpw-js.js"></script>          
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z2GFLD9F81"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Z2GFLD9F81');
+</script>
 </head>
 <body>
+            
 <div class="page-password-generator">
             <section class="lp-intro " style="">
 
